--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
     "enzyme": "^3.10.0",
     "enzyme-adapter-preact-pure": "^2.0.0",
     "eslint": "^6.0.1",
     "eslint-config-preact": "^1.1.0",
     "jest": "^24.9.0",
     "jest-preset-preact": "^1.0.0",
+    "postcss": "^7.0.35",
     "preact-cli": "^3.0.0",
-    "sirv-cli": "1.0.3"
+    "sirv-cli": "1.0.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   },
   "dependencies": {
     "preact": "^10.3.2",
