feat: adding unsplash images and adding the api key

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   },
   "dependencies": {
+    "dotenv-webpack": "^7.0.2",
     "preact": "^10.3.2",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1"
